# atlas-mcp-server

./: .env.example  .gitignore.python  README.python.md  Tasks_2025-07-07T21-20-14.md  analysis.md  implementation-plan.md  migration-guide.md  pyproject.toml  tech-specs.md
.augment/rules/: 01_code_tools.md  02_code_style.md  03_git_workflows.md  04_security.md  05_testing.md  06_continuous_learning.md  07_memory.md
src/atlas_mcp/: __init__.py  main.py
src/atlas_mcp/config/: __init__.py
src/atlas_mcp/database/: __init__.py
src/atlas_mcp/models/: __init__.py
src/atlas_mcp/resources/: __init__.py
src/atlas_mcp/services/: __init__.py
src/atlas_mcp/tools/: __init__.py
src/atlas_mcp/utils/: __init__.py
tests/: __init__.py  conftest.py
